# HRT_Chip

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: Dockerfile.dreamplace
docs/: baseline-artifacts.md  competition-profile.md  experiment-matrix.md  failure-modes.md  hrt-partcl-macro-placement-engineering-guidelines.md  hybrid-search-solver.md  implementation-roadmap.md  integration-notes.md  macro-placement-competition.md  overview_of_the_project.md  proposed-solution-overview.md  release-readiness-checklist.md  step1-diffusion-model.md  step2-position-masking.md  step3-multi-objective-proxy-to-ppa.md  submission-runbook.md  v2_veteran.md  veterans-advice.md  week_gates.md
scripts/: build_dreamplace_image.ps1  build_dreamplace_image.sh  run_dreamplace_flow.ps1  run_dreamplace_flow.sh
tests/: test_baseline_schema.py  test_budget_module.py  test_classical_solver_parser.py  test_diffusion_guardrails.py  test_geometry_legality.py  test_geometry_normalized.py  test_mixed_size_dreamplace_docker.py  test_mixed_size_metrics.py  test_mixed_size_tiebreak_regression.py  test_netlist_surrogates.py  test_phase3_guidance.py  test_phase4.py  test_phase5_benchmarks.py  test_phase6.py  test_pipeline_smoke.py  test_rank_metrics.py  test_runtime_budget.py  test_schedule_custom.py  test_search_pipeline.py  test_training_schedule_subsample.py
tools/: ab_compare_runs.py  ab_protocol.md  check_stub_sweep_regression.py  finalize_submission_day7.py  run_compact_matrix_day4_5.py  run_full17_promotion_day6.py  run_official_baseline_evidence.py
(+81 files in other folders)
