[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrt-chip"
version = "0.1.0"
description = "HRT / Partcl macro placement — diffusion-first pipeline (Phase 3 guided objectives + proxy selection)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.12.0",
    "rich>=13.7.0",
    "numpy>=1.26.0",
    "torch>=2.1.0,<3",
    "torch-geometric>=2.5.0",
]

[project.scripts]
hrt-chip = "hrt_chip.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = ["pytest>=8.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
